# lafarren-image-completer

./: .gitignore  CMakeLists.txt  Doxyfile  FAQ.txt  README.txt
html/: AppData_8h_source.html  AppITKImage_8h_source.html  AppITKMask_8h_source.html  AppWxImage_8h_source.html  AppWxMask_8h_source.html  Atomic_8h_source.html  CommandLineOptions_8h_source.html  CompositorRoot_8h_source.html  CompositorUtils_8h_source.html  Compositor_8h_source.html  ConstNodeLabels_8h_source.html  Core_8h_source.html  DbgMem_8h_source.html  EnergyCalculatorContainer_8h_source.html  EnergyCalculatorFftConfig_8h_source.html  EnergyCalculatorFftUtils_8h_source.html  EnergyCalculatorFft_8h_source.html  EnergyCalculatorPerPixel_8h_source.html  EnergyCalculatorUtils_8h_source.html  EnergyCalculator_8h_source.html  EnergyWsst_8h_source.html  ImageConst_8h_source.html  ImageFloat_8h_source.html  ImageScalable_8h_source.html  ImageUtils_8h_source.html  Label_8h_source.html  LfnIcImage_8h_source.html  LfnIcMask_8h_source.html  LfnIcSettings_8h_source.html  LfnIcTypes_8h_source.html  LfnIc_8h_source.html  MaskLod_8h_source.html  MaskScalable_8h_source.html  MaskWritable_8h_source.html  MathUtils_8h_source.html  NeighborEdge_8h_source.html  NodeSet_8h_source.html  Node_8h_source.html  OutputBlenderDebugSoftMaskIntensity_8h_source.html  OutputBlenderNone_8h_source.html  (+201 more)
html/search/: all_61.html  all_62.html  all_63.html  all_64.html  all_65.html  all_67.html  all_68.html  all_69.html  all_6c.html  all_6e.html  all_6f.html  all_70.html  all_71.html  all_73.html  all_74.html  all_75.html  all_76.html  all_7e.html  classes_61.html  classes_62.html  classes_63.html  classes_64.html  classes_66.html  classes_69.html  classes_6c.html  classes_6d.html  classes_6e.html  classes_6f.html  classes_70.html  classes_73.html  functions_61.html  functions_62.html  functions_63.html  functions_69.html  functions_6e.html  functions_6f.html  functions_70.html  functions_72.html  functions_73.html  functions_75.html  (+11 more)
lib/taucs/: taucs_config_build.h  taucs_private.h
src/: image-completer.sln
src/image-completer-cmd/: AppData.cpp  AppData.h  AppITKImage.cpp  AppITKImage.h  AppITKMask.cpp  AppITKMask.h  AppImageITK.cpp  AppImageITK.h  AppImageWx.cpp  AppImageWx.h  AppMaskITK.cpp  AppMaskITK.h  AppMaskWx.cpp  AppMaskWx.h  AppWxImage.cpp  AppWxImage.h  AppWxMask.cpp  AppWxMask.h  CommandLineOptions.cpp  CommandLineOptions.h  ITKImage.cpp  ITKImage.h  ITKMask.cpp  ITKMask.h  Main.cpp  MainITK.cpp  Pch.cpp  Pch.h  SettingsText.cpp  SettingsText.h  SettingsUi.cpp  SettingsUi.h  image-completer-cmd.vcxproj
src/image-completer-lib/api/: LfnIc.h  LfnIcImage.h  LfnIcMask.h  LfnIcSettings.h  LfnIcTypes.h  PriorityBp.h  PriorityBpHost.h  PriorityBpSettings.h  PriorityBpTypes.h
src/image-completer-lib/impl/: Compositor.cpp  Compositor.h  ConstNodeLabels.cpp  ConstNodeLabels.h  EnergyCalculator.h  EnergyCalculator.inl  EnergyCalculatorContainer.cpp  EnergyCalculatorContainer.h  HostImageLocal.cpp  HostImageLocal.h  Image.cpp  Image.h  ImageConst.cpp  ImageConst.h  ImageScalable.cpp  ImageScalable.h  Label.cpp  Label.h  LfnIc.cpp  LfnIcMask.cpp  LfnIcSettings.cpp  Mask.cpp  Mask.h  MaskLod.h  MaskScalable.cpp  MaskScalable.h  MaskWritable.cpp  MaskWritable.h  NeighborEdge.cpp  NeighborEdge.h  Node.cpp  Node.h  NodeSet.cpp  NodeSet.h  Patch.h  Pch.h  PriorityBp.cpp  PriorityBpRunner.cpp  PriorityBpRunner.h  Scalable.h  (+10 more)
src/image-completer-lib/impl/compositors/: CompositorRoot.cpp  CompositorRoot.h  CompositorUtils.cpp  CompositorUtils.h  ImageFloat.cpp  ImageFloat.h  ImageFloat.inl  OutputBlenderDebugSoftMaskIntensity.cpp  OutputBlenderDebugSoftMaskIntensity.h  OutputBlenderNone.cpp  OutputBlenderNone.h  OutputBlenderSoftMask.cpp  OutputBlenderSoftMask.h  PatchBlenderNone.cpp  PatchBlenderNone.h  PatchBlenderPriority.cpp  PatchBlenderPriority.h  PatchTypeDebugPatchOrder.cpp  PatchTypeDebugPatchOrder.h  PatchTypeNormal.cpp  PatchTypeNormal.h  PatchTypePoisson.cpp  PatchTypePoisson.h  PoissonSolver.cpp  PoissonSolver.h  TaucsMatrix.cpp  TaucsMatrix.h
src/image-completer-lib/impl/energy-calculators/: EnergyCalculatorFft.cpp  EnergyCalculatorFft.h  EnergyCalculatorFftConfig.h  EnergyCalculatorFftUtils.cpp  EnergyCalculatorFftUtils.h  EnergyCalculatorPerPixel.cpp  EnergyCalculatorPerPixel.h  EnergyCalculatorUtils.h  EnergyCalculatorUtils.inl  EnergyWsst.cpp  EnergyWsst.h
src/priority-bp/api/: PriorityBp.h  PriorityBpHost.h  PriorityBpSettings.h  PriorityBpTypes.h
src/priority-bp/impl/: Compositor.cpp  Compositor.h  ConstNodeLabels.cpp  EnergyCalculator.h  EnergyCalculator.inl  EnergyCalculatorContainer.cpp  EnergyCalculatorContainer.h  HostImageLocal.cpp  Image.cpp  Label.cpp  Label.h  Mask.cpp  Mask.h  MaskWritable.cpp  MaskWritable.h  NeighborEdge.cpp  NeighborEdge.h  Node.cpp  Node.h  NodeSet.cpp  NodeSet.h  Pch.cpp  Pch.h  PriorityBp.cpp  PriorityBpRunner.cpp  PriorityBpRunner.h  Scalable.h  ScalableDebugging.cpp  ScalableDebugging.h  ScopedNodeEnergyBatch.h  Settings.cpp  Settings.h  priority-bp.vcxproj  priority-bp.vcxproj.filters
src/priority-bp/impl/compositors/: CompositorRoot.cpp  CompositorUtils.cpp  ImageFloat.cpp  ImageFloat.h  ImageFloat.inl  OutputBlenderDebugSoftMaskIntensity.cpp  OutputBlenderDebugSoftMaskIntensity.h  OutputBlenderSoftMask.cpp  OutputBlenderSoftMask.h  PatchBlenderNone.cpp  (+11 more)
src/tech/: Pch.cpp  Pch.h  tech.vcxproj  tech.vcxproj.filters
src/tech/tech/: Atomic.cpp  Atomic.h  Atomic.inl  CmdLine.cpp  CmdLine.h  CmdLine.inl  Core.cpp  Core.h  DbgMem.h  ImageUtils.cpp  ImageUtils.h  ImageUtils.inl  MathUtils.h  MathUtils.inl  Profile.cpp  Profile.h  StrUtils.cpp  StrUtils.h  Time.cpp  Time.h  UnDbgMem.h
test-data/: .gitignore  TwoPlanes.mhd  TwoPlanes.raw  TwoPlanesMask.mhd  TwoPlanesMask.raw  bridge-complete-full.bat  bridge-complete-quick.bat  elephant-complete-full.bat  elephant-complete-full.sh  elephant-complete-quick.bat  elephant-complete-quick.sh  giraffe-complete-full.bat  giraffe-complete-quick.bat  ship-complete-full.bat  ship-complete-quick.bat
test-data/IgnoredPixels/: script.sh
(+7 files in other folders)
